Fix overflow of code/highlight blocks

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -113,6 +113,10 @@ p {
     font-size: 0.9rem;
 }
 
+.highlight > pre {
+    overflow: scroll;
+}
+
 .alert {
     padding: 10px;
     margin-bottom: 20px;
